Feat: oauth-gradle-properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ spring.datasource.hikari.jdbc-url=jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
 spring.h2.console.enabled=true
 #page 116 END
 
+#oauth2 properties page 174
+spring.profiles.include=oauth
+spring.security.oauth2.client.registration.google.client-id=\uD074\uB77C\uC774\uC5B8\uD2B8 ID
+spring.security.oauth2.client.registration.google.client-secret=\uD074\uB77C\uC774\uC5B8\uD2B8 \uBCF4\uC548 \uBE44\uBC00
+spring.security.oauth2.client.registration.google.scope=profile,email
