--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
     implementation 'org.springframework.session:spring-session-jdbc'
     testImplementation 'org.springframework.session:spring-session-jdbc'
+
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
 test {
