Feat: properties update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,22 +9,22 @@
     #colunm 1,
     #colunm 2,
     #....  } \uD615\uD0DC\uB85C \uBCF4\uC5EC\uC8FC\uAE30 \uC704\uD568
-#logging.level.org.hibernate.SQL=DEBUG
-#spring.jpa.properties.hibernate.format_sql=true
-#
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-##spring 2.1 \uBC84\uC804 \uC774\uD6C4\uB85C \uC124\uC815\uD574\uC57C\uD568.
-#spring.datasource.hikari.jdbc-url=jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
-#
-##Page 99~100 END
-#
-##Page 116
-#spring.h2.console.enabled=true
-##page 116 END
-#
-#
-##Page 202
-#spring.session.store-type=jdbc
-#
+logging.level.org.hibernate.SQL=DEBUG
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring 2.1 \uBC84\uC804 \uC774\uD6C4\uB85C \uC124\uC815\uD574\uC57C\uD568.
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
+
+#Page 99~100 END
+
+#Page 116
+spring.h2.console.enabled=true
+#page 116 END
+
+
+#Page 202
+spring.session.store-type=jdbc
+
 spring.profiles.include=oauth
