Feat: properties update

--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 
     testImplementation 'org.springframework.security:spring-security-test'
 
-    compileOnly 'org.mariadb.jdbc:mariadb-java-client'
+    implementation 'org.mariadb.jdbc:mariadb-java-client'
 }
 
 test {
