--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     testImplementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
+    implementation 'org.springframework.session:spring-session-jdbc'
+    testImplementation 'org.springframework.session:spring-session-jdbc'
 
     testImplementation 'org.springframework.security:spring-security-test'
 
