--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -50,7 +50,7 @@ jobs:
       run: echo "CurrentTime=${{steps.current-time.outputs.formattedTime}}" # (10)
       shell: bash
 
-    - name: Generate deployment package # (1)
+    - name: Generate deployment package # (11)
       run: |
         mkdir -p before-deploy
         cp scripts/*.sh before-deploy/
@@ -59,10 +59,11 @@ jobs:
         cd before-deploy && zip -r before-deploy *
         cd ../ && mkdir -p deploy
         mv before-deploy/before-deploy.zip deploy/$PROJECT_NAME.zip
+      shell: bash
 
-#     - name: Make zip file
-#       run: zip -r ./$PROJECT_NAME.zip .         # (12)
-#       shell: bash
+    - name: Make zip file
+      run: zip -r ./$PROJECT_NAME.zip .         # (12)
+      shell: bash
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1      #(13)
@@ -73,6 +74,7 @@ jobs:
 
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./$PROJECT_NAME.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/$PROJECT_NAME.zip  #(14)
+      shell: bash
 
     - name: Code Deploy
       run: aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name $CODE_DEPLOY_GROUP_NAME --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$PROJECT_NAME.zip
