--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -64,6 +64,10 @@ jobs:
     - name: Make zip file
       run: zip -r ./$PROJECT_NAME.zip .         # (12)
       shell: bash
+    
+    - name: Current Location
+      run: pwd
+      shell: bash
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1      #(13)
@@ -71,6 +75,10 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-northeast-2
+        
+    - name: Current Location
+      run: pwd
+      shell: bash
 
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./deploy/$PROJECT_NAME.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/$PROJECT_NAME.zip  #(14)
