--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -50,16 +50,16 @@ jobs:
       run: echo "CurrentTime=${{steps.current-time.outputs.formattedTime}}" # (10)
       shell: bash
 
-#     - name: Generate deployment package # (11)
-#       run: |
-#         mkdir -p before-deploy
-#         cp scripts/*.sh before-deploy/
-#         cp appspec.yml before-deploy/
-#         cp build/libs/*.jar before-deploy/
-#         cd before-deploy && zip -r before-deploy *
-#         cd ../ && mkdir -p deploy
-#         mv before-deploy/before-deploy.zip deploy/$PROJECT_NAME.zip
-#       shell: bash
+    - name: Generate deployment package # (11)
+      run: |
+        mkdir -p before-deploy
+        cp scripts/*.sh before-deploy/
+        cp appspec.yml before-deploy/
+        cp build/libs/*.jar before-deploy/
+        cd before-deploy && zip -r before-deploy *
+        cd ../ && mkdir -p deploy
+        mv before-deploy/before-deploy.zip $PROJECT_NAME.zip
+      shell: bash
 
     - name: Make zip file
       run: zip -r ./$PROJECT_NAME.zip .         # (12)
