--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -58,7 +58,7 @@ jobs:
         cp build/libs/*.jar before-deploy/
         cd before-deploy && zip -r before-deploy *
         cd ../ && mkdir -p deploy
-        mv before-deploy/before-deploy.zip $PROJECT_NAME.zip
+        mv before-deploy/before-deploy.zip deploy/$PROJECT_NAME.zip
       shell: bash
 
     - name: Make zip file
@@ -81,7 +81,7 @@ jobs:
       shell: bash
 
     - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./$PROJECT_NAME.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/$PROJECT_NAME.zip  #(14)
+      run: aws s3 cp --region ap-northeast-2 ./deploy/$PROJECT_NAME.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/$PROJECT_NAME.zip  #(14)
 
     - name: Code Deploy
       run: aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name $CODE_DEPLOY_GROUP_NAME --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$PROJECT_NAME.zip
