--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,24 +50,21 @@ jobs:
       run: echo "CurrentTime=${{steps.current-time.outputs.formattedTime}}" # (10)
       shell: bash
 
-    - name: Generate deployment package # (11)
-      run: |
-        mkdir -p before-deploy
-        cp scripts/*.sh before-deploy/
-        cp appspec.yml before-deploy/
-        cp build/libs/*.jar before-deploy/
-        cd before-deploy && zip -r before-deploy *
-        cd ../ && mkdir -p deploy
-        mv before-deploy/before-deploy.zip deploy/$PROJECT_NAME.zip
-      shell: bash
+#     - name: Generate deployment package # (11)
+#       run: |
+#         mkdir -p before-deploy
+#         cp scripts/*.sh before-deploy/
+#         cp appspec.yml before-deploy/
+#         cp build/libs/*.jar before-deploy/
+#         cd before-deploy && zip -r before-deploy *
+#         cd ../ && mkdir -p deploy
+#         mv before-deploy/before-deploy.zip deploy/$PROJECT_NAME.zip
+#       shell: bash
 
     - name: Make zip file
       run: zip -r ./$PROJECT_NAME.zip .         # (12)
       shell: bash
     
-    - name: Current Location
-      run: pwd
-      shell: bash
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1      #(13)
@@ -76,9 +73,6 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-northeast-2
         
-    - name: Current Location
-      run: pwd
-      shell: bash
 
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./deploy/$PROJECT_NAME.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/$PROJECT_NAME.zip  #(14)
