--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,16 +50,16 @@ jobs:
       run: echo "CurrentTime=${{steps.current-time.outputs.formattedTime}}" # (10)
       shell: bash
 
-#     - name: Generate deployment package # (11)
-#       run: |
-#         mkdir -p before-deploy
-#         cp scripts/*.sh before-deploy/
-#         cp appspec.yml before-deploy/
-#         cp build/libs/*.jar before-deploy/
-#         cd before-deploy && zip -r before-deploy *
-#         cd ../ && mkdir -p deploy
-#         mv before-deploy/before-deploy.zip deploy/$PROJECT_NAME.zip
-#       shell: bash
+    - name: Generate deployment package # (final)
+      run: |
+        mkdir -p before-deploy
+        cp scripts/*.sh before-deploy/
+        cp appspec.yml before-deploy/
+        cp build/libs/*.jar before-deploy/
+        cd before-deploy && zip -r before-deploy *
+        cd ../ && mkdir -p deploy
+        mv before-deploy/before-deploy.zip deploy/$PROJECT_NAME.zip
+      shell: bash
 
     - name: Make zip file
       run: zip -r ./$PROJECT_NAME.zip .         # (12)
@@ -75,7 +75,7 @@ jobs:
         
 
     - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./$PROJECT_NAME.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/$PROJECT_NAME.zip  #(14)
+      run: aws s3 cp --region ap-northeast-2 ./deploy/$PROJECT_NAME.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/$PROJECT_NAME.zip  #(14)
 
-    - name: Code Deploy
+    - name: Code Deploy #변경사항 있음!
       run: aws deploy create-deployment --application-name $CODE_DEPLOY_APP_NAME --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name $CODE_DEPLOY_GROUP_NAME --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$PROJECT_NAME.zip
