--- a/appspec.yml
+++ b/appspec.yml
@@ -5,14 +5,14 @@ files:
     destination: /home/ec2-user/app/step2/zip/ # 프로젝트 위치
     overwrite: yes
 
-# permissions:
-#   - object: /
-#     pattern: "**"
-#     owner: ec2-user
-#     group: ec2-user
+permissions:
+  - object: /
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
 
-# hooks:
-#   ApplicationStart:
-#     - location: deploy.sh
-#       timeout: 60
-#       runas: ec2-user
+hooks:
+  ApplicationStart:
+    - location: deploy.sh
+      timeout: 60
+      runas: ec2-user
