Feat: pid properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,5 @@
 
 #Page 202
 #spring.session.store-type=jdbc
-spring.pid.file=aws-web-service.pid
+spring.pid.file=/home/ec2-user/app/step2/aws-web-service.pid
 spring.profiles.include=oauth
