--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,4 +29,4 @@
 
 # file path / \uD504\uB85C\uC81D\uD2B8\uBA85
 spring.pid.file=/home/ec2-user/app/step2/aws-web-service.pid
-spring.profiles.include=oauth,real-db
+spring.profiles.include=real-db
